# Ultimate_ML_Project

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md
backend/logserver/: DockerFile  HandlerTask.java  Server.java
backend/src/: app.py  database.py  draw_image.py  user_data.py
backend/src/app/: Dockerfile  app.py  app_tests.py  colours.py  data_create.py  database.py  requirements.txt  test_app.py  test_database.py  test_stats.py  user_data.py
backend/src/intro/: local.py  main.py  main_books.py
cleanup/: Dockerfile  cleanup.py
src/: model_classification.py  run_tests.py
src/tests/: tests.py
src/utils/: paths.py  transform_images.py
telegram-bot/: bot.py  censor.py  colours.py  token_bot.py  trybot.py
telegrambot/: Dockerfile  README.md  bot.py  censor.py  minibot.py  minibot_server.py  requirements.txt  test_censor.py  test_interactions_with_db.py  test_os.py  test_trybot.py  token_bot.py  trybot.py
telegrambot/tests/: test_censor.py  test_interactions_with_db.py  test_os.py  test_trybot.py
win/: ContentManager.h  Logger.h  SetupApp.h  WinWrapper.h
win/app/: README.md  main.py  tools.py
win/example/: testing.py  transparent_window.py
win/setup/: CMakeLists.txt  README.md  main_setup.cpp
win/setup/headers/apps/: GlobalFlags.h  SetupApp.h
win/setup/headers/gui/: GuiManager.h
win/setup/headers/logic/: CertificateLoader.h  Downloader.h  Installer.h  Logger.h  WinWrapper.h
win/setup/src/: CertificateLoader.cpp  Downloader.cpp  GuiManager.cpp  Installer.cpp  Logger.cpp  SetupApp.cpp  WinWrapper.cpp
(+31 files in other folders)
